@@ -41,7 +41,6 @@ quiet_kmsg
 
 CMDLINE=`cat /proc/cmdline`
 # Scan CMDLINE for any specified real_root= or cdroot arguments
-REAL_ROOT=''
 FAKE_ROOT=''
 REAL_ROOTFLAGS=''
 CRYPT_SILENT=0
